--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
+<!DOCTYPE html>
 <html>
+
 <head>
-<title>GCC Standardization Organization (GSO)</title>
+    <title>GCC Standardization Organization (GSO)</title>
 </head>
+
 <body>
-<h3>Welcome to GSO New Website</h3>
+    <h1>GCC Standardization Organization (GSO)</h1>
+    <p>>Welcome to GSO New Website.</p>
 </body>
+
 </html>
