--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
     <h1>GCC Standardization Organization (GSO)</h1>
-    <p>>Welcome to GSO New Website.</p>
+    <p>Welcome to GSO New Website.</p>
 </body>
 
 </html>
