--- a/index.html
+++ b/index.html
@@ -2,7 +2,37 @@
 <html>
 
 <head>
-    <title>GCC Standardization Organization (GSO)</title>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>GSO - GCC Standardization Organization</title>
+    <meta name="description" content="GSO - GCC Standardization Organization">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="keywords" Content="GSO - GCC Standardization Organization">
+    <meta name="author" Content="GSO - GCC Standardization Organization">
+    <meta name="google-site-verification" content="" />
+    <!-- For favicon.ico from the root directory -->
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <!-- For apple touch icon from the root directory -->
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <!-- CSS includes -->
+    <!-- Normalize (A modern, HTML5-ready alternative to CSS resets) -->
+    <link rel="stylesheet" href="themes/css/normalize.css">
+    <!-- For Bootstrap - 3.3.7 -->
+    <link rel="stylesheet" href="themes/css/bootstrap-rtl.min.css" id="cssSwitch">
+    <!-- For Font Awesome -->
+    <link rel="stylesheet" href="themes/css/font-awesome.min.css">
+    <!-- For GSO Custom Styles -->
+    <link rel="stylesheet" href="themes/css/gso-theme.min.css">
+    <!-- Modernizr (Respond to user’s browser features.) -->
+    <script src="themes/js/vendor/modernizr-2.8.3.min.js"></script>
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+            <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+            <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]--> 
 </head>
 
 <body>
@@ -10,4 +40,4 @@
     <p>Welcome to GSO New Website.</p>
 </body>
 
-</html>
+</html> 
